Completed Copy From for both memberOf and member

--- a/BLAZAM/Pages/Groups/ViewGroup.razor
+++ b/BLAZAM/Pages/Groups/ViewGroup.razor
@@ -47,7 +47,7 @@
                                     {
                                         <DropdownItem Clicked="ToggleEditMode">Edit...</DropdownItem>
                                     }
-                                   
+                                        <DropdownItem Clicked="@(()=>{AssignMemberModal?.Show();})">Add Group Member...</DropdownItem>
                                     @if (Group.CanAssign)
                                     {
                                         RefreshGroupGroups();
@@ -84,7 +84,7 @@
             <AssignToModalContent OnGroupMembershipChange=@((change)=>{AssignToModal.Hide(); InvokeAsync(StateHasChanged);}) DirectoryModel="Group" />
         </AppModal>
         <AppModal TextColor="TextColor.Dark" Title="Assign To" @ref=@AssignMemberModal>
-            <AddMemberModalContent OnGroupMembershipChange=@((change)=>{AssignMemberModal.Hide(); InvokeAsync(StateHasChanged);}) DirectoryModel="Group" />
+            <AddMemberModalContent ModelChanged=@((change)=>{AssignMemberModal.Hide();InvokeAsync(StateHasChanged);}) Group="Group" />
         </AppModal>
         <AppModal TextColor="TextColor.Dark" Title="Move To" @ref=@MoveToModal>
             @if (MoveToModal.IsShown)
